# project-euler

./: .gitignore  100.hs  101.hs  102.hs  103.hs  104.hs  11.hs  110.hs  112.hs  12.hs  121.hs  13.hs  144.hs  145.hs  169.hs  17.hs  19.hs  2.hs  20.hs  21.hs  23.hs  233.hs  24.hs  243.hs  25.hs  27.hs  28.hs  29.hs  31.hs  32.hs  34.hs  37.hs  42.hs  43.hs  44.hs  46.hs  47.hs  48.hs  5.hs  53.hs  (+51 more)
Elsantodel90/: ContinuedFraction.hs  Digits.hs  Parsing.hs  Polynomial.hs  Pythagorean.hs  RomanNumerals.hs
src/: 1.hs  122.hs  14.hs  18.hs  22.hs  35.hs  36.hs  47.hs  48.hs  49.hs  50.hs  54.hs  7.hs  72.hs  74.hs  79.hs  84.hs  92.hs  Prob1.hs  check.sh  checkAll.sh  solutions.csv
src/Elsantodel90/: BinarySearch.hs  Combinatorics.hs  ContinuedFraction.hs  Geometry.hs  Graph.hs  IntPot.hs  ModularArithmetic.hs  Numeric.hs  Polynomial.hs  Primes.hs  RomanNumerals.hs
src/Problems/: 10.hs  101.hs  108.hs  112.hs  144.hs  26.hs  3.hs  39.hs  52.hs  68.hs  69.hs  76.hs  86.hs  88.hs  90.hs  93.hs  98.hs  Prob1.hs  Prob10.hs  Prob100.hs  Prob101.hs  Prob102.hs  Prob103.hs  Prob104.hs  Prob108.hs  Prob11.hs  Prob110.hs  Prob112.hs  Prob12.hs  Prob121.hs  Prob122.hs  Prob13.hs  Prob14.hs  Prob144.hs  Prob145.hs  Prob15.hs  Prob16.hs  Prob169.hs  Prob17.hs  Prob18.hs  (+91 more)
test/: Prob1Test.hs  TestSuite.hs  TestSuite1.hs
test/Problems/: Prob100Test.hs  Prob101Test.hs  Prob102Test.hs  Prob103Test.hs  Prob104Test.hs  Prob108Test.hs  Prob10Test.hs  Prob110Test.hs  Prob112Test.hs  Prob11Test.hs  Prob121Test.hs  Prob122Test.hs  Prob12Test.hs  Prob13Test.hs  Prob144Test.hs  Prob145Test.hs  Prob14Test.hs  Prob15Test.hs  Prob169Test.hs  Prob16Test.hs  Prob17Test.hs  Prob18Test.hs  Prob19Test.hs  Prob1Test.hs  Prob20Test.hs  Prob21Test.hs  Prob22Test.hs  Prob233Test.hs  Prob23Test.hs  Prob243Test.hs  Prob24Test.hs  Prob25Test.hs  Prob26Test.hs  Prob27Test.hs  Prob28Test.hs  Prob29Test.hs  Prob2Test.hs  Prob30Test.hs  Prob31Test.hs  Prob32Test.hs  (+74 more)
