name:           project-euler
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Agustín Santiago Gutiérrez
maintainer:     Agustín Santiago Gutiérrez

library 
  build-depends:    
                   base >=4.6.0 && <4.7,
                   array >=0.4.0 && <0.5,
                   containers >=0.5.0 && <0.6,
                   random >=1.0.1 && <1.1,
                   HUnit >=1.2.5 && <1.3,
                   cond >=0.4.1 && <0.5
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  
                   Elsantodel90.BinarySearch,
                   Elsantodel90.Combinatorics,
                   Elsantodel90.ContinuedFraction,
                   Elsantodel90.Digits,
                   Elsantodel90.Geometry,
                   Elsantodel90.Graph,
                   Elsantodel90.IntPot,
                   Elsantodel90.ModularArithmetic,
                   Elsantodel90.Numeric,
                   Elsantodel90.Parsing,
                   Elsantodel90.Polynomial,
                   Elsantodel90.Primes,
                   Elsantodel90.Pythagorean,
                   Elsantodel90.RomanNumerals

test-suite TestSuite
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -rtsopts
  build-depends:   base >= 4, HTF > 0.9
  hs-source-dirs:  
                  src, 
                  test 
  main-is:         TestSuite.hs
  other-modules:   
                   Problems.Prob1,
                   Problems.Prob10,
                   Problems.Prob100,
                   Problems.Prob100Test,
                   Problems.Prob101,
                   Problems.Prob101Test,
                   Problems.Prob102,
                   Problems.Prob102Test,
                   Problems.Prob103,
                   Problems.Prob103Test,
                   Problems.Prob104,
                   Problems.Prob104Test,
                   Problems.Prob108,
                   Problems.Prob108Test,
                   Problems.Prob10Test,
                   Problems.Prob11,
                   Problems.Prob110,
                   Problems.Prob110Test,
                   Problems.Prob112,
                   Problems.Prob112Test,
                   Problems.Prob11Test,
                   Problems.Prob12,
                   Problems.Prob121,
                   Problems.Prob121Test,
                   Problems.Prob122,
                   Problems.Prob122Test,
                   Problems.Prob12Test,
                   Problems.Prob13,
                   Problems.Prob13Test,
                   Problems.Prob14,
                   Problems.Prob144,
                   Problems.Prob144Test,
                   Problems.Prob145,
                   Problems.Prob145Test,
                   Problems.Prob14Test,
                   Problems.Prob15,
                   Problems.Prob15Test,
                   Problems.Prob16,
                   Problems.Prob169,
                   Problems.Prob169Test,
                   Problems.Prob16Test,
                   Problems.Prob17,
                   Problems.Prob17Test,
                   Problems.Prob18,
                   Problems.Prob18Test,
                   Problems.Prob19,
                   Problems.Prob19Test,
                   Problems.Prob1Test,
                   Problems.Prob2,
                   Problems.Prob20,
                   Problems.Prob20Test,
                   Problems.Prob21,
                   Problems.Prob21Test,
                   Problems.Prob22,
                   Problems.Prob22Test,
                   Problems.Prob23,
                   Problems.Prob233,
                   Problems.Prob233Test,
                   Problems.Prob23Test,
                   Problems.Prob24,
                   Problems.Prob243,
                   Problems.Prob243Test,
                   Problems.Prob24Test,
                   Problems.Prob25,
                   Problems.Prob25Test,
                   Problems.Prob26,
                   Problems.Prob26Test,
                   Problems.Prob27,
                   Problems.Prob27Test,
                   Problems.Prob28,
                   Problems.Prob28Test,
                   Problems.Prob29,
                   Problems.Prob29Test,
                   Problems.Prob2Test,
                   Problems.Prob3,
                   Problems.Prob30,
                   Problems.Prob30Test,
                   Problems.Prob31,
                   Problems.Prob31Test,
                   Problems.Prob32,
                   Problems.Prob32Test,
                   Problems.Prob33,
                   Problems.Prob33Test,
                   Problems.Prob34,
                   Problems.Prob34Test,
                   Problems.Prob35,
                   Problems.Prob35Test,
                   Problems.Prob36,
                   Problems.Prob36Test,
                   Problems.Prob37,
                   Problems.Prob37Test,
                   Problems.Prob38,
                   Problems.Prob38Test,
                   Problems.Prob39,
                   Problems.Prob39Test,
                   Problems.Prob3Test,
                   Problems.Prob4,
                   Problems.Prob40,
                   Problems.Prob40Test,
                   Problems.Prob41,
                   Problems.Prob41Test,
                   Problems.Prob42,
                   Problems.Prob42Test,
                   Problems.Prob43,
                   Problems.Prob43Test,
                   Problems.Prob44,
                   Problems.Prob44Test,
                   Problems.Prob45,
                   Problems.Prob45Test,
                   Problems.Prob46,
                   Problems.Prob46Test,
                   Problems.Prob47,
                   Problems.Prob47Test,
                   Problems.Prob48,
                   Problems.Prob48Test,
                   Problems.Prob49,
                   Problems.Prob49Test,
                   Problems.Prob4Test,
                   Problems.Prob5,
                   Problems.Prob50,
                   Problems.Prob50Test,
                   Problems.Prob51,
                   Problems.Prob51Test,
                   Problems.Prob52,
                   Problems.Prob52Test,
                   Problems.Prob53,
                   Problems.Prob53Test,
                   Problems.Prob54,
                   Problems.Prob54Test,
                   Problems.Prob55,
                   Problems.Prob55Test,
                   Problems.Prob56,
                   Problems.Prob56Test,
                   Problems.Prob57,
                   Problems.Prob57Test,
                   Problems.Prob58,
                   Problems.Prob58Test,
                   Problems.Prob59,
                   Problems.Prob59Test,
                   Problems.Prob5Test,
                   Problems.Prob6,
                   Problems.Prob60,
                   Problems.Prob60Test,
                   Problems.Prob61,
                   Problems.Prob61Test,
                   Problems.Prob62,
                   Problems.Prob62Test,
                   Problems.Prob63,
                   Problems.Prob63Test,
                   Problems.Prob64,
                   Problems.Prob64Test,
                   Problems.Prob65,
                   Problems.Prob65Test,
                   Problems.Prob66,
                   Problems.Prob66Test,
                   Problems.Prob67,
                   Problems.Prob67Test,
                   Problems.Prob68,
                   Problems.Prob68Test,
                   Problems.Prob69,
                   Problems.Prob69Test,
                   Problems.Prob6Test,
                   Problems.Prob7,
                   Problems.Prob70,
                   Problems.Prob70Test,
                   Problems.Prob71,
                   Problems.Prob71Test,
                   Problems.Prob72,
                   Problems.Prob72Test,
                   Problems.Prob73,
                   Problems.Prob73Test,
                   Problems.Prob74,
                   Problems.Prob74Test,
                   Problems.Prob75,
                   Problems.Prob75Test,
                   Problems.Prob76,
                   Problems.Prob76Test,
                   Problems.Prob77,
                   Problems.Prob77Test,
                   Problems.Prob78,
                   Problems.Prob78Test,
                   Problems.Prob79,
                   Problems.Prob79Test,
                   Problems.Prob7Test,
                   Problems.Prob8,
                   Problems.Prob80,
                   Problems.Prob80Test,
                   Problems.Prob81,
                   Problems.Prob81Test,
                   Problems.Prob82,
                   Problems.Prob82Test,
                   Problems.Prob83,
                   Problems.Prob83Test,
                   Problems.Prob84,
                   Problems.Prob84Test,
                   Problems.Prob85,
                   Problems.Prob85Test,
                   Problems.Prob86,
                   Problems.Prob86Test,
                   Problems.Prob87,
                   Problems.Prob87Test,
                   Problems.Prob88,
                   Problems.Prob88Test,
                   Problems.Prob89,
                   Problems.Prob89Test,
                   Problems.Prob8Test,
                   Problems.Prob9,
                   Problems.Prob90,
                   Problems.Prob90Test,
                   Problems.Prob91,
                   Problems.Prob91Test,
                   Problems.Prob92,
                   Problems.Prob92Test,
                   Problems.Prob93,
                   Problems.Prob93Test,
                   Problems.Prob94,
                   Problems.Prob94Test,
                   Problems.Prob95,
                   Problems.Prob95Test,
                   Problems.Prob96,
                   Problems.Prob96Test,
                   Problems.Prob97,
                   Problems.Prob97Test,
                   Problems.Prob98,
                   Problems.Prob98Test,
                   Problems.Prob99,
                   Problems.Prob99Test,
                   Problems.Prob9Test
